plugins {
    id 'java-library'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
}

group 'ch.unibas.dmi.dbis'
version '0.0.1-ALPHA'

// Specify your main application class here.
mainClassName = 'ch.unibas.dmi.dbis.cs108.example.ThinkOutsideTheRoom'

javafx {
    version = "19.0.2.1"
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.base', 'javafx.graphics']
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // JavaFX dependency for controls; other modules are handled by the plugin.
    implementation 'org.openjfx:javafx-controls:19.0.2.1'

    // reflections for zero configuration classpath analysis
    implementation 'org.reflections:reflections:0.10.2'

    implementation 'ch.qos.logback:logback-classic:1.4.6'

    // JUnit dependencies for testing.
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation("org.junit.jupiter:junit-jupiter:5.+")

    // Lombok for compile-time code generation.
    compileOnly 'org.projectlombok:lombok:1.18.26'
    annotationProcessor 'org.projectlombok:lombok:1.18.26'
}

test {
    useJUnitPlatform()
}

jar {
    duplicatesStrategy(DuplicatesStrategy.INCLUDE)
    manifest {
        attributes(
                'Main-Class': mainClassName
        )
    }
    from {
        configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) } +
                configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    run {
        jvmArgs = [
                '--module-path', configurations.runtimeClasspath.asPath,
                '--add-modules', 'javafx.controls,javafx.fxml,javafx.base,javafx.graphics'
        ]
    }
}
